src/main/java/org/example/kobold/api/error/HttpUnavailableException.java
package org.example.kobold.api.error;

public class HttpUnavailableException extends Exception {
    public HttpUnavailableException(String message) {
        super(message);
    }
}

